Fixed overflow rules

--- a/style.css
+++ b/style.css
@@ -355,6 +355,11 @@ input[type="radio"].visually-hidden {
   margin: 0px;
 }
 
+.search__map-wrapper {
+  margin-top: 47px;
+  overflow: hidden;
+}
+
 .search__form-wrapper {
   position: relative;
   width: 568px;
@@ -370,7 +375,6 @@ input[type="radio"].visually-hidden {
   background-color: #ffffff;
   box-shadow: 0 7px 15px rgba(0, 1, 1, 0.15);
   z-index: 1;
-  /* opacity: 0; */
 }
 
 .search-form--show {
@@ -384,24 +388,20 @@ input[type="radio"].visually-hidden {
 @keyframes formshow {
   0% {
     transform: translateY(-100%);
-    /* opacity: 0; */
   }
 
   100% {
     transform: translateY(0);
-    /* opacity: 1; */
   }
 }
 
 @keyframes formhide {
   0% {
     transform: translateY(0);
-    /* opacity: 1; */
   }
 
   100% {
     transform: translateY(-100%);
-    /* opacity: 0; */
   }
 }
 
